[package]
name = "hyper-rt"
version = "0.1.0"
authors = ["cssivision <cssivision@gmail.com>"]
license = "MIT"
repository = "https://github.com/cssivision/hyper-rt"
homepage = "https://github.com/cssivision/hyper-rt"
description = "hyper rt implementation"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-io = "0.3"
hyper = "1"
pin-project-lite = "0.2"
awak = "0.2"
